--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@
             /*    background-image: linear-gradient(rgb(242, 232, 175), rgba(0, 0, 0, 0));*/
             /*    width: 100%;*/
             /*    margin: 0 100px 0 100px;*/
-            /*    width: 100%;*/
+                width: 100%;
 
         }
 
