--- a/style.css
+++ b/style.css
@@ -194,108 +194,66 @@
         }
 
 
-        header {
-            position: fixed;
-            /*    background-image: linear-gradient(rgb(242, 232, 175), rgba(0, 0, 0, 0));*/
-            /*    width: 100%;*/
-            /*    margin: 0 100px 0 100px;*/
-                width: 100%;
 
-        }
 
-        header button {
-            font-family: audrey;
-            font-size: 1rem;
-            color: white;
-        }
+        header {}
 
-        header nav {
-
+        nav {
+            background-color: red;
             display: flex;
-            flex-direction: column;
-
-
-
-
+            align-items: center;
+            justify-content: center;
 
 
         }
 
-        header nav a {
-            font-family: audrey;
-            text-decoration: none;
-            color: white;
-        }
-
-
-        .navbar {
-            overflow: scroll;
-            /*    background-image: linear-gradient(rgb(219, 218, 212), rgba(0, 0, 0, 0));*/
+        .list_wrapper {
             display: flex;
-            background-color: #242A31;
-            font-family: audrey;
-            font-size: 1rem;
-            color: white;
-
-
-
-        }
-
-        .navbar a {
-
-
-            text-decoration: none;
-        }
-
-        .dropdown_headings,
-        .dropdown_bodytexts {
-
-            overflow: hidden;
-            color: white;
+            justify-content: center;
+            margin: 0;
         }
 
 
 
-        .alle {}
-
-
-        .dropdown_headings .dropbtn,
-
-        .dropdown_bodytexts .dropbtn,
-        .all .dropbtn {
-            border: none;
-            background-color: transparent;
-            color: white;
-            padding: 20px 50px 40px 50px;
-
+        ul {
+            list-style-type: none;
+            padding: 0;
         }
 
-        .navbar a:hover {}
+        .headings ul,
+        li {
+            margin: 0px 50px 0px 50px;
+        }
 
-        .dropdown_headings:hover .dropbtn {}
-
-        .dropdown-content {
+        .dropdown_content {
             display: none;
-            position: sticky;
-            /*    min-width: 100px;*/
-            color: white;
+            position: absolute;
+            background-color: white;
             z-index: 1;
-            margin-left: 50px;
+        }
+
+        .dropdown_content a {
+            padding: 0;
 
         }
 
-        .dropdown-content a {
-            color: white;
+        .headings:hover .dropdown_content {
             display: flex;
-            padding-bottom: 50px;
+            flex-direction: column;
 
         }
 
-        .dropdown-content a:hover {}
-
-        .dropdown_headings:hover .dropdown-content,
-
-        .dropdown_bodytexts:hover .dropdown-content {
+        .body_texts:hover .dropdown_content {
             display: flex;
             flex-direction: column;
         }
+
+        .logo {
+            display: inline-block;
+            width: 100px;
+            height: 75px;
+
+
+
+        }
+
