--- a/style.css
+++ b/style.css
@@ -122,6 +122,8 @@
 
 
 
+
+
         /*DROPDOWN------------------------*/
 
         @font-face {
@@ -201,17 +203,19 @@
 
         nav {
             background-color: red;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-
+            display: grid;
+            grid-template-columns: 100px 1fr;
+            grid-template-rows: 1fr;
         }
 
         .list_wrapper {
             display: flex;
             justify-content: center;
             margin: 0;
+            grid-row: 1;
+            grid-column: 1/3;
+            align-self: center;
+
         }
 
 
@@ -250,10 +254,10 @@
         }
 
         .logo {
-            display: inline-block;
             width: 100px;
             height: 75px;
-
+            grid-row: 1;
+            grid-column: 1;
 
 
         }
