--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
         body {
             margin: 0;
             padding: 0;
+
         }
 
         .data-container {
@@ -56,8 +57,11 @@
         }
 
         .splash {
+
             background-color: rgb(10, 192, 247);
-            padding: 250px 0 250px 0;
+            padding: 150px 0 95px 0;
+
+
         }
 
         .splash p {
@@ -78,10 +82,11 @@
             font-weight: 100;
             letter-spacing: 10px;
             margin: 0;
+
         }
 
         .splash p {
-            font-size: 1rem;
+            font-size: 1.5rem;
         }
 
 
@@ -104,6 +109,9 @@
             cursor: pointer;
         }
 
+        header {
+            position: absolute;
+        }
 
         nav {
             background-color: #242A31;
@@ -111,9 +119,10 @@
             grid-template-columns: 100px 1fr;
             grid-template-rows: 1fr;
             font-family: audrey;
-            font-size: 1.2rem;
+            font-size: 1.1rem;
             position: fixed;
             width: 100%;
+
 
 
         }
@@ -125,7 +134,8 @@
             grid-row: 1;
             grid-column: 1/3;
             align-self: center;
-            padding: 50px;
+            padding: 30px 0 30px 0;
+
         }
 
 
