--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
         .valgt {
 
 
-            text-decoration: underline overline;
+            text-decoration: underline;
 
         }
 
@@ -107,6 +107,12 @@
 
         .logo {
             cursor: pointer;
+
+
+            width: 100px;
+            height: 75px;
+
+
         }
 
         header {
@@ -118,7 +124,7 @@
             display: grid;
             grid-template-columns: 100px 1fr;
             grid-template-rows: 1fr;
-            font-family: audrey;
+            font-family: aileron;
             font-size: 1.1rem;
             position: fixed;
             width: 100%;
@@ -129,12 +135,12 @@
 
         .list_wrapper {
             display: flex;
-            justify-content: center;
+            justify-content: flex-end;
             margin: 0;
             grid-row: 1;
             grid-column: 1/3;
             align-self: center;
-            padding: 30px 0 30px 0;
+            padding: 30px 10px 30px 0;
 
         }
 
@@ -215,16 +221,7 @@
 
 
 
-        .logo {
-            display: none;
 
-            width: 100px;
-            height: 75px;
-            /*grid-row: 1;*/
-            /*grid-column: 1;*/
-            padding: 5px;
-
-        }
 
         nav a {
 
@@ -265,7 +262,7 @@
             }
 
             .logo {
-                display: block;
+                /*                display: block;*/
             }
 
             h1 {
@@ -296,7 +293,7 @@
                 display: grid;
                 grid-template-columns: 100px 1fr;
                 grid-template-rows: 1fr;
-                font-family: audrey;
+                font-family: aileron;
                 font-size: 1.2rem;
                 position: fixed;
                 width: 100%;
@@ -403,7 +400,7 @@
                 height: 75px;
                 grid-row: 1;
                 grid-column: 1;
-                padding: 5px;
+                /*                padding: 5px;*/
             }
 
 
