--- a/style.css
+++ b/style.css
@@ -7,6 +7,45 @@
 
         }
 
+        footer {
+            background-color: #242A31;
+            font-family: aileron;
+            font-size: .8rem;
+            width: 100%;
+            bottom: 0;
+            color: white;
+
+            margin: 0 auto;
+
+        }
+
+        footer .col {
+            flex-grow: 1;
+            flex-basis: 300px;
+        }
+
+        footer .sectionwrapper {
+
+
+            display: flex;
+            flex-wrap: wrap;
+
+            flex-direction: row;
+            justify-content: space-around;
+            padding-left: 30px;
+
+        }
+
+        footer p {
+            font-size: .8rem;
+
+        }
+
+        footer a {
+            text-decoration: none;
+            color: white;
+        }
+
         .valgt {
 
 
@@ -106,11 +145,14 @@
 
 
         .logo {
+
             cursor: pointer;
 
-
-            width: 100px;
-            height: 75px;
+            align-self: center;
+            width: 50px;
+            height: 37.5px;
+            padding-top: 4px;
+            padding-left: 4px;
 
 
         }
@@ -128,6 +170,7 @@
             font-size: 1.1rem;
             position: fixed;
             width: 100%;
+            align-items: center;
 
 
 
@@ -140,7 +183,7 @@
             grid-row: 1;
             grid-column: 1/3;
             align-self: center;
-            padding: 30px 10px 30px 0;
+            padding: 10px 10px 10px 0;
 
         }
 
@@ -171,11 +214,8 @@
 
         .dropdown_content li {
             padding: 10px;
-            /*
-            border: 1px solid white;
-            border-radius: 5px;
-*/
-            margin-bottom: 10px;
+
+
 
 
 
@@ -193,12 +233,15 @@
 
         .dropdown_content {
             display: none;
-            /*            position: absolute;*/
+            position: absolute;
             /*                background-color: #242A31;*/
 
             z-index: 1;
             margin: 0;
             border-radius: 10px;
+            color: white;
+            background-color: #242A31;
+
         }
 
         .dropdown_content a {
