--- a/style.css
+++ b/style.css
@@ -54,8 +54,8 @@
         }
 
         img {
-
-
+            width: 100%;
+            object-fit: contain;
             height: 100%;
         }
 
@@ -80,8 +80,10 @@
             padding: 50px;
             box-shadow: 5px 5px 3px -5px rgba(0, 0, 0, 0.41);
             margin: 0 auto;
+/*
             width: 200px;
             height: 300px;
+*/
             cursor: pointer;
 
         }
@@ -328,13 +330,13 @@
             }
 
             .backgroundbox {
-                background-color: white;
-                padding: 50px;
-                box-shadow: 5px 5px 3px -5px rgba(0, 0, 0, 0.41);
 
+
+/*
                 width: 300px;
                 height: 400px;
-                cursor: pointer;
+*/
+
 
             }
 
@@ -511,13 +513,11 @@
         @media screen and (min-width:934px) {
 
             .backgroundbox {
-                background-color: white;
-                padding: 50px;
-                box-shadow: 5px 5px 3px -5px rgba(0, 0, 0, 0.41);
 
+                /*
                 width: 300px;
                 height: 400px;
-                cursor: pointer;
+*/
 
             }
 
