--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@
 
         footer p {
             font-size: .8rem;
+            color: #242A31;
 
         }
 
@@ -68,11 +69,12 @@
         .data-container {
 
             margin: 0 auto;
-            padding: 20px 10px 30px 10px;
+            padding: 40px 40px 0px 40px;
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+            grid-template-columns: repeat(1, 1fr);
             background-color: #f4f4f4;
-            grid-gap: 20px;
+            grid-gap: 40px;
+
 
         }
 
@@ -89,24 +91,17 @@
 
         }
 
-        article {
-            /*            place-self: center center;*/
 
-        }
 
-        article h3 {
-            padding: 25px 0px 25px 0px;
-            font-family: aileron;
-            font-size: 1.2rem;
-            margin: 0 auto;
-            text-align: center;
-        }
 
         article p {
-            /*            max-width: 300px;*/
+            /*                max-width: 350px;*/
             margin: 0 auto;
-            padding: 0 40px 0 40px;
+            padding: 0 0px 0 10px;
+            color: #2a3e57;
+
         }
+
 
         article #style {
             padding-bottom: 50px;
@@ -114,6 +109,10 @@
 
         article #classic {
             padding-bottom: 10px;
+        }
+
+        strong {
+            font-weight: 400;
         }
 
         .splash {
@@ -128,9 +127,9 @@
             font-family: simplifica;
             text-align: center;
             color: white;
-            font-size: 2rem;
+            font-size: 1rem;
             font-weight: 100;
-            letter-spacing: 10px;
+            letter-spacing: 5px;
             margin: 0;
         }
 
@@ -138,16 +137,14 @@
             font-family: simplifica;
             text-align: center;
             color: white;
-            font-size: 3rem;
+            font-size: 4rem;
             font-weight: 100;
-            letter-spacing: 10px;
+            letter-spacing: 3px;
             margin: 0;
 
         }
 
-        .splash p {
-            font-size: 1.5rem;
-        }
+
 
 
         p {
@@ -158,9 +155,13 @@
         }
 
         h3 {
-            margin-left: 5px;
+
             font-family: aileron;
-            font-size: 1.2rem;
+            color: #2a3e57;
+            padding: 25px 0px 25px 10px;
+            font-family: aileron;
+            font-size: 1.4rem;
+            margin: 0 auto;
         }
 
 
@@ -315,6 +316,13 @@
 
             body {}
 
+            .data-container {
+                grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+                grid-gap: 40px;
+                padding: 40px 40px 0px 40px;
+
+            }
+
             .wrapper {
                 max-width: 90vw;
                 margin: 0 auto;
@@ -330,33 +338,26 @@
             h1 {
 
                 font-size: 7rem;
+                letter-spacing: 10px;
+                padding: 50px 0px 0px 0px;
 
             }
 
             .splash p {
-                font-size: 1rem;
+
+                font-size: 1.5rem;
+                padding: 0 0 50px 0;
+                letter-spacing: 8px;
+
             }
 
             article {
-                padding: 70px 0 0 0;
+
                 align-self: start;
             }
 
-            article h3 {
-                padding: 25px 0px 25px 0px;
-                font-family: aileron;
-                font-size: 1.2rem;
-                margin: 0 auto;
 
 
-            }
-
-            article p {
-                /*                max-width: 350px;*/
-                margin: 0 auto;
-                padding: 0 40px 0 40px;
-                text-align: center;
-            }
 
             article #style {
                 padding-bottom: 50px;
@@ -498,9 +499,7 @@
                 font-size: 8rem;
             }
 
-            .splash p {
-                font-size: 2rem;
-            }
+
         }
 
 
@@ -515,9 +514,7 @@
 
             body {}
 
-            article {
-                padding: 70px 0 0 0;
-            }
+            article {}
 
             .wrapper {
                 max-width: 90vw;
